@@ -1,5 +1,14 @@
 Version 4.2-beta1:
 
+* Album-art plugins - Ignore the "Hide info bar art icon unless separate album 
+cover fetched" option when the Mini-Fauxdacious plugin is running and is not 
+docked (floating).  The purpose of this option was to prevent displaying the 
+same image in two places in the main window at once.  However, when running the 
+Mini-Fauxdacious plugin undocked (it's own separate window), that most users' 
+intent is to hide the main window thus hiding the duplicate image.  Therefore, 
+we've added code to ignore the hide duplicates option when Mini-Fauxdacious is 
+running undocked from the main window.  
+
 * Merge Audacious's new alternate "dark theme" and "flat" icons.  We also 
 added additional options in the [File].[Settings].[Appearance] tab to include 
 both a GUI checkbox for the old option to use Fauxdacious's "classic" icons for 
